<resources>
    <string name="app_name">ConnectSix</string>
    <string name="mainAppName">Connect Six</string>
    <string name="gameStart">Game Start</string>
    <string name="user1_name">User1NickName</string>
    <string name="user2_name">User2NickName</string>
    <string name="user1_record">User1Record</string>
    <string name="user2_record">User2Record</string>
    <string name="create_account">Create Account</string>
    <string name="nickname">Nickname</string>
    <string name="waiting">Waiting…</string>
    <string name="random_match">Random Match</string>
    <string name="join_game">Join Game</string>
    <string name="create_game">Create Game</string>
    <string name="room_num">Room No.(ex.0000)</string>
    <string name="win_lose">Win Or Lose</string>
    <string name="retry">Retry</string>
    <string name="exit">EXIT</string>
    <string name="win_str">You WIN!!</string>
    <string name="defeat_str">DEFEAT!!</string>
    <string name="numberOne">1</string>
    <string name="temporary_room_num">0000</string>
    <string name="room_num_indicator">Room No.</string>
    <string name="change_nickname">Change Nickname</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="have_a_great_day">Have a great day</string>
    <string name="please_enter_room_num">Please enter the room number.</string>
    <string name="id_at_least_three_characters">Please enter at least three characters.</string>
    <string name="login_success">Login Success</string>
    <string name="change_name_lose_data">If you change name, you will lose data. If you still want to change, please click the button one more time</string>
    <string name="nickname_already_taken">is already taken. Please try it again.</string>
    <string name="nickname_between_three_twelve">Please set nickname between 3 and 12 letters</string>
    <string name="check_room_num_again">Please check the room number again.</string>
    <string name="room_num_already_taken">The room number is already taken.</string>
    <string name="user_left">User left this game.</string>
    <string name="one_more_click_exit">Warning : Click once more to exit game!</string>
    <string name="upper_exit">EXIT</string>
    <string name="game_start">Game Start</string>
    <string name="plz_set_nick">Please Enter your nick name!</string>
    <string name="computer">AI</string>
    <string name="practice_with_ai">Play with AI</string>
    <string name="Back">Back</string>
</resources>