<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/stentiga"
        android:text="@string/mainAppName"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@id/circleLinearLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/circleLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/nicknameLinearLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainTextView">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/black_circle_main" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/black_circle_main" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/black_circle_main" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/black_circle_main" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/black_circle_main" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/white_circle_main" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nicknameLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/randomGameStartButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/circleLinearLayout">

        <EditText
            android:id="@+id/setNickName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/nickname" />

        <ImageButton
            android:id="@+id/enterButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FF0000"
            android:clickable="true"
            android:focusable="true"
            android:padding="10dp"
            android:scaleType="fitStart"
            android:src="@drawable/enter" />

        <TextView
            android:id="@+id/welcomeSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone" />

    </LinearLayout>

    <Button
        android:id="@+id/changeNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#AEAEAE"
        android:padding="5dp"
        android:text="Change Nickname"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/randomGameStartButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nicknameLinearLayout" />

    <Button
        android:id="@+id/randomGameStartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/random_match"
        app:layout_constraintBottom_toTopOf="@id/roomNumberEdittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changeNickname" />


    <EditText
        android:id="@+id/roomNumberEdittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:hint="@string/room_num"
        app:layout_constraintBottom_toTopOf="@id/createGameButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/randomGameStartButton" />

    <Button
        android:id="@+id/createGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/create_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/joinGameButton"
        app:layout_constraintTop_toBottomOf="@id/roomNumberEdittext" />

    <Button
        android:id="@+id/joinGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/join_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/createGameButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roomNumberEdittext" />

</androidx.constraintlayout.widget.ConstraintLayout>